<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_SymbolHandle" Id="{6b63cd5d-7aae-448d-a69a-edd770a10da9}">
    <Declaration><![CDATA[TYPE
   ST_SymbolHandle :
   STRUCT
      Handle : DWORD;
      SymbolAddress : ST_SymbolAddress;
   END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>